<resources>
    <string name="app_name">Mealer</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="home_address">Address</string>
    <string name="card_number">Card Number</string>
    <string name="security_code">CVV</string>
    <string name="expiration_date">MM/YY</string>
    <string name="welcome_message">Welcome to Mealer!</string>
    <string name="sign_in">Sign In</string>
    <string name="client">Client</string>
    <string name="cook">Cook</string>
    <string name="or">or</string>
    <string name="welcome_message_slogan">Join the community</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">Welcome!</string>
    <string name="clientComplaint">Client Complaint:</string>
    <string name="clientComplaints">Client Complaints:</string>
    <string name="suspend">Suspend Cook</string>
    <string name="dismiss">Dismiss Complaint</string>
    <string name="dismiss2">Dismiss</string>
    <string name="suspendCookPermanent">Permanent Suspension</string>
    <string name="tempSuspension">Temporary Suspension</string>
    <string name="suspensionLength">Length of suspension (days)</string>
    <string name="dismiss3">Dismiss Complaint</string>
    <string name="offerMeal">Offer/Unoffer Meal</string>
    <string name="deleteMeal">Delete Meal From Menu</string>
    <string name="add_meal">Add Meal</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_types_description">Meal Type (Main dish, dessert, etc.)</string>
    <string name="mealSearch">Search for Meals</string>
    <string name="mealNameHint">Meal Name...</string>
    <string name="mealTypeHint">Meal Type...</string>
    <string name="cuisineTypeHint">Cuisine Type...</string>
    <string name="searchButton">Search</string>
    <string name="backButton">Back</string>
    <string name="search_for_meals">Search for Meals</string>
    <string name="complain">Complain</string>
    <string name="rate">Rate</string>
    <string name="meal">Meal</string>
    <string name="status">Status</string>
    <string name="submit">Submit</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="MealSearchName">Enter meal name, type or cuisine</string>
    <string name="buyMeal">Purchase Meal</string>
    <string name="timeHint">Please Specify Pickup Time</string>
</resources>