<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/txt_or_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or" />

        <TextView
            android:id="@+id/txt_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/btn_client_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client" />

        <Button
            android:id="@+id/btn_cook_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cook" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>