<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="57dp" />

    <TextView
        android:id="@+id/textViewCook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/textViewMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/textViewStatusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="57dp" />

    <TextView
        android:id="@+id/textViewCookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cook"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="95dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRate"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/button_blue"
        android:text="@string/rate"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComplain"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/button_blue"
        android:text="@string/complain"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="54dp" />

</androidx.constraintlayout.widget.ConstraintLayout>