<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSubmitComplaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_complaint"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textViewMealName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="44dp" />

    <EditText
        android:id="@+id/editTextComplaintMessage"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="140dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/button_blue"
        android:text="@string/submit"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="209dp" />

    <TextView
        android:id="@+id/textViewComplaintMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Complaint Description"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="108dp" />

    <TextView
        android:id="@+id/textViewCookName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cook"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="76dp" />

    <TextView
        android:id="@+id/textViewCookItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="76dp" />

    <TextView
        android:id="@+id/textViewMealItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>