<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdd835"
    tools:context=".ClientSignUp">

    <TextView
        android:id="@+id/sign_up_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="17dp"
        android:paddingTop="10dp"
        android:paddingEnd="17dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_display" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="17dp"
        android:paddingTop="10dp"
        android:paddingEnd="17dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="17dp"
        android:paddingTop="10dp"
        android:paddingEnd="17dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="17dp"
        android:paddingTop="10dp"
        android:paddingEnd="17dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/signUpButtonClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/creditCardNumberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/card_number"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:paddingStart="17dp"
        android:paddingTop="10dp"
        android:paddingEnd="17dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameField" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditCardNumberField">

        <EditText
            android:id="@+id/securityCodeField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/credit_card_left_background"
            android:ems="10"
            android:hint="@string/security_code"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            android:paddingStart="17dp"
            android:paddingTop="10dp"
            android:paddingEnd="17dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/expirationDateField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/credit_card_right_background"
            android:ems="10"
            android:hint="@string/expiration_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:paddingStart="17dp"
            android:paddingTop="10dp"
            android:paddingEnd="17dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>