<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ComplaintDialog">

    <TextView
        android:id="@+id/txtComplaint"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/txtSuspensionLength"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/suspensionLength"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="17dp"
        android:paddingTop="10dp"
        android:paddingEnd="17dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/btnTempSuspension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComplaint"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonDismissComplaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="158dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/dismiss3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPermanentSuspension" />

    <Button
        android:id="@+id/btnTempSuspension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="91dp"
        android:background="@drawable/button_background"
        android:text="@string/tempSuspension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSuspensionLength" />

    <Button
        android:id="@+id/btnPermanentSuspension"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="77dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/suspendCookPermanent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTempSuspension" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonDismissComplaint" />

</androidx.constraintlayout.widget.ConstraintLayout>