<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdd835"
    tools:context=".HomeClient">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/logOut"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnLogOutClick"
            android:text="@string/log_out"
            app:icon="@android:drawable/btn_star" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/weclometxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/greetingtxt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#8C7777"
            android:backgroundTint="#FDFBFB"
            android:text="You are logged in as Client"
            android:textAlignment="center"
            android:textScaleX="1"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <ImageView
        android:id="@+id/cookPhotoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/a99b323bfcfc25084e87cd29f6575533" />

</androidx.constraintlayout.widget.ConstraintLayout>